CCApp/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\yanks_000\CoachesCorner\CCApp
-d
C:\Users\yanks_000\CoachesCorner\CCApp\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\yanks_000\CoachesCorner\CCApp\Formation.java
<---- end of javadoc command ---->
Loading source file C:\Users\yanks_000\CoachesCorner\CCApp\Formation.java...
Constructing Javadoc information...
C:\Users\yanks_000\CoachesCorner\CCApp\Formation.java:9: error: package Java.util does not exist
import Java.util.*;
^
C:\Users\yanks_000\CoachesCorner\CCApp\Formation.java:15: error: cannot find symbol
    private ArrayList<Point> locations;
            ^
  symbol:   class ArrayList
  location: class Formation
C:\Users\yanks_000\CoachesCorner\CCApp\Formation.java:17: error: cannot find symbol
    public Formation(String formation_name, ArrayList<Player> players)
                                            ^
  symbol:   class ArrayList
  location: class Formation
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\Formation.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\package-frame.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\package-summary.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\allclasses-frame.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\allclasses-noframe.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\index.html...
Generating C:\Users\yanks_000\CoachesCorner\CCApp\doc\stylesheet.css...
3 warnings
